[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace_number_cards"
version = "0.0.1"
description = "Create custom number cards"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
    "frappe>=15",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"

readme = "README.md"
license = { text = "MIT" }

[tool.uv]
override-dependencies = [
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]
